--- a/vendas.html
+++ b/vendas.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Página de vendas</h1>
+    <p>Vendas = R$ 5000,00</p>
     <a href="index.html">voltar para a pagina inicial</a>
 </body>
 </html>
